[incubator-kie-issues#1545]: Create JPA persistence layer for Human Tasks (#3735)
* incubator-kie-issues#1545: Create JPA persistence layer for Human Tasks
* - testing
* - springboot and it tests
* - cleanup
* - fix query
* - fix packages
 *- fix it tests endpoints
* - increase priority